v6.6.2 2nd May 2022
  - Bug fixes.

v6.6.1 13th April 2022
  - The latest version of ABI v13 is v13.3.1.
  - The latest version of ABI v12 is v12.10.1.
  - Bug fixes.

v6.6.0 1st April 2022
  - Python v3.6 is no longer supported.
  - The .sip file parser (created using flex and bison) has been replaced with
    a pure Python implementation using PLY.
  - The latest version of ABI v13 is v13.3.0.
  - The latest version of ABI v12 is v12.10.0.
  - Bug fixes.

v6.5.1 25th January 2022
  - Added the --no-compile command line option to sip-build.
  - Added the --no-version-info command line option to sip-build.
  - The latest version of ABI v13 is v13.2.1.
  - The latest version of ABI v12 is v12.9.1.
  - Bug fixes.

v6.5.0 25th November 2021
  - Added 'UIntEnum' as a value of the /BaseType/ enum annotation to support
    enum.IntEnum types with unsigned values.
  - The latest version of ABI v13 is v13.2.0.
  - Bug fixes.

v6.4.0 24th October 2021
  - Added support for the 'py_ssize_t_clean' argument to the '%Module'
    directive.
  - Bug fixes.

v6.3.1 13th October 2021
  - Bug fixes.

v6.3.0 5th October 2021
  - SIP itself now uses the limited API itself.
  - Added the Project.get_platform_tag() method to the sipbuild API.

v6.2.0 28th September 2021
  - The interpreter tag in the name of a wheel now specifies a minimum Python
    version (rather than each supported Python version) when the limited API is
    used.
  - The /PyQtNoQMetaObject/ annotation can now be applied to namespaces.
  - sip-build, sip-install and sip-wheel now support the --disabled-feature
    command line option.
  - Added support for Python v3.10.
  - Added the setuptools builder which is the default for Python v3.10 and
    later.
  - The ABI version, wherever specified, is now a minimum version with a
    default minor version of 0.
  - Bug fixes.

v6.1.1 9th June 2021
  - The abi-version project option is interpreted as a minimum version rather
    than an exact version.
  - Bug fixes.
