@@ -1,4 +1,7 @@
 v6.6.2 2nd May 2022
+  - The 'array' type is now accessible from the sip module.
+  - The latest version of ABI v13 is v13.4.0.
+  - The latest version of ABI v12 is v12.11.0.
   - Bug fixes.
 
 v6.6.1 13th April 2022
